# MoneyPrinterTurbo

./: .env  .env.example  .gitignore  README-en.md  README.md  backend.bat  config.example.toml  frontend.bat  frontend.sh  pyproject.toml  requirements.txt  setup.bat  start.bat
app/: asgi.py  router.py
app/config/: config.py
app/controllers/: base.py
app/controllers/v1/: video.py  voices.py
app/models/: schema.py
app/services/: llm.py  material.py  state.py  subtitle.py  task.py  video.py  voice.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/layout/: header.tsx  sidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  progress.tsx  select.tsx  slider.tsx  toast.tsx
frontend/src/components/video/: config-panel.tsx  preview-panel.tsx  video-card.tsx
frontend/src/hooks/: use-tasks.ts  use-video-generation.ts  use-voices.ts
frontend/src/lib/: api.ts  query-client.ts  types.ts  utils.ts
resource/videos/: .gitkeep
