# Dependências principais do MoneyPrinterTurbo v2.0
# O ambiente de execução é fixado via uv.lock.
[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "moneyprinterturbo"
version = "2.0.0"
description = "Gerador automático de vídeos curtos com IA — fork reformado"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "moviepy==2.1.2",
    "fastapi==0.115.6",
    "uvicorn==0.32.1",
    "openai==1.56.1",
    "faster-whisper==1.1.0",
    "loguru==0.7.3",
    "redis==5.2.0",
    "python-multipart==0.0.19",
    "pyyaml==6.0.3",
    "requests==2.33.1",
    "socksio==1.0.0",
    "pydub==0.25.1",
    "python-dotenv>=1.0.0",
    "kokoro>=0.9.4; python_version>='3.10' and python_version<'3.13'",
    "kokoro==0.7.16; python_version>='3.13'",
    "soundfile>=0.12.1",
    "toml>=0.10.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
# O projeto roda como aplicação, não como pacote Python publicável.
package = false
